final-project/css/main.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}

/* Personal reminds to understand step by step in my head */

/* In body we adjust the font of the whole page */
body{
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

/* Doing header which is the top of the page and the header has to be full of dark background */
header{
    background-color: #222;
    padding: 0;
}

/* After I'll add some details such as the golden part from the Logo to Home word */
.site-header{
    background-color: #222;
    padding: 16px;
}

/* Logo size */
.site-header img{
    width: 100px; 
}

/* Starting the menu of navigation: home, about, etc... */
nav{
    background-color: #222;
    /* width: 100%; */
    padding: 0 0 24px;
    margin: 0;
}

nav ul{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0;
    margin: 0;
    gap: 0; 
    /* gap 0 removes the space between the words (home, about us, services, team, contact */
    list-style: none;
    /* list style removes the bullet point from unordered lists */
}

nav a{
    font-weight: 400;
    text-decoration: none;
}

/* 1st item: Home (full gold bar) */
nav ul li:first-child{
    width: 100%;
    background-color: #c78c06;
    text-align: center;
    padding: 16px 0;
    margin-top: 0;
    border-top: none;
}

nav ul li:first-child a{
    background-color: #c78c06;
    color: #222;
    display: inline-block;
}

/* "not(:first-child)" means every child except the fisrt one */
/* Changing the features and colours for the other words */
nav ul li:not(:first-child){
    padding: 16px 0;
}

nav ul li:not(:first-child) a{
    color: #c78c06;
}

/* Going to Search Bar */
/* .site-search is the class of the whole section */
.site-search{
    display: flex;
    margin: 0;
    /* fix this padding because the space in the botton is not this big */
    padding: 0 16px 0;
}

/* Doing Search Input = Search Bar properly */
.site-search input[type="search"]{
    flex: 1;
    padding: 8px;
    border: 1.5px solid #ccc;
    border-radius: 3px;
    font-size: 1rem;
}

/* Doing the Search Button = the icon but just the box arround the icon */
.site-search button{
    border: 1.5px solid #c78c06;
    background-color: #222;
    padding: 0 5px;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Now I'm doing the icon properly */
/* material-symbols-outlined is the class name for the icons in general and the reasons why that I can change just the search icon is because I identifyed first where this class is, which is inside the .site-search class */
.site-search .material-symbols-outlined{
    color: #c78c06;
    font-size: 1.6rem;
}

/* Now I'm moving on to the next part, which is when starts the 1st image */
/* Welcome Section */
 #welcome{
    position: relative;
    margin: 0 0 2.5rem;
 }

 #welcome img{
    width: 100%;
    display: block;
 }

 .welcome-text{
    position: absolute;
    bottom: 7%;
    left: 0;
    right: 0;
    max-width: 100%;
    padding: 20px 24px;
    background-color: rgba(0, 0, 0, 0.65);
    color: white;  
 }

 .welcome-text h1{
    font-size: 4rem;
    line-height: 1.5;
    font-weight: 700;
    margin-bottom: 1rem;
 }

 .welcome-text p{
    margin-bottom: 1.5rem;
 }

 .welcome-text .buttonarrow{
    background-color: #c78c06;
    color: #222;
    padding: 24px 12px;
    text-decoration: none;
    display: inline-flex;
    align-items: center;
    gap: 8px;
    font-size: 1.2rem;
 }

.welcome-text .material-symbols-outlined{
    font-size: 3rem;
    line-height: 1;
    color: black;
}

 #welcome{
    margin-bottom: 0;
 }

 #about{
    margin-top: 0;
 }

 /* Moving foward to About Us part */
 #about{
    background-color: #ffe6ac;
    padding: 16px 16px 24px;
    margin: 0;
 }

.about-image img{
    width: 100%;
    display: block;
    margin-bottom: 16px;
 }

.about-text h2{
    font-size: 2.6rem;
    font-weight: 700;
    color: black;
    margin-bottom: 16px;
}

.about-text p{
    color: black;
    margin-bottom: 1rem;
    line-height: 1.5;
}

/* Starting Our Services */
#services{
    background-color: white;
    padding: 24px 16px 24px;
    margin: 0;
}

#services h2{
    font-size: 2.6rem;
    font-weight: 700;
    color: black;
    margin-bottom: 16px;
}

.service1,
.service2,
.service3,
.service4,
.service5{
    background-color: white;
    margin-bottom: 16px;
}

#services img{
    width: 100%;
    display: block;
}

.service-digital,
.service-marketing,
.service-video,
.service-web,
.service-print{
    padding: 16px;
    background-color: #ffe6ac;
}

.service-digital h3,
.service-marketing h3,
.service-video h3,
.service-web h3,
.service-print h3{
    font-size: 1.6rem;
    font-weight: 700;
    color: black;
    margin-bottom: 12px;
}

.service-digital p,
.service-marketing p,
.service-video p,
.service-web p,
.service-print p{
    color: black;
    line-height: 1.5;
    margin-bottom: 16px;
}
/* ... */

